<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailMovieFragment">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/main_margin"
            android:paddingBottom="@dimen/main_margin"
            android:paddingStart="@dimen/main_margin"
            android:paddingTop="@dimen/item_margin"
            android:orientation="vertical">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/backdropImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                app:shapeAppearance="@style/ShapeAppearanceOverlay.App.Image"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_label"
                android:textColor="@color/colorPrimary"
                android:layout_marginTop="@dimen/secondary_margin"
                android:textStyle="bold"
                android:text="@string/request_none_data"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_label"
                android:layout_marginTop="@dimen/secondary_margin"
                android:textStyle="bold"
                android:text="@string/label_date"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_space"
                android:text="@string/request_none_data" />


            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_label"
                android:layout_marginTop="@dimen/secondary_margin"
                android:textStyle="bold"
                android:text="@string/label_rate"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textRating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_space"
                android:drawablePadding="2dp"
                android:drawableStart="@drawable/baseline_star_24"
                android:gravity="center_vertical"
                android:text="@string/request_none_data" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_label"
                android:layout_marginTop="@dimen/secondary_margin"
                android:textStyle="bold"
                android:text="@string/label_genres"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textGenresList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_space"
                android:text="@string/request_none_data" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_label"
                android:layout_marginTop="@dimen/secondary_margin"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:text="@string/label_overview"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/item_space"
                android:text="@string/request_none_data" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/secondary_margin"
                android:layout_height="wrap_content">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/label_review"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_label"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/textShowReview"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textShowReview"
                    android:background="?attr/selectableItemBackground"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_show_all"
                    android:textAllCaps="false"
                    android:visibility="gone"
                    android:textColor="@color/colorPrimary"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textReviewNotFound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/main_margin"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/main_margin"
                android:text="@string/message_if_not_review" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvReview"
                android:layout_marginTop="@dimen/secondary_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnShowTrailer"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/secondary_margin"
                android:text="@string/action_show_trailer"/>

        </LinearLayout>

    </ScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>